# docker-ghc-linear-types

./: .gitignore  Dockerfile  README.md  docker-compose.yml
assets/: cabal.project  playground.cabal
